Fixed bugs. Change method alignment

--- a/task5/css/style.css
+++ b/task5/css/style.css
@@ -71,6 +71,7 @@ body {
 
 .loging {
  display: inline-block;
+ color: #fff;
  border-left: 1px #4f9fd9 solid;
  border-right: 1px #4f9fd9 solid;
  border-bottom: 1px #4f9fd9 solid;
@@ -88,18 +89,15 @@ body {
 
 .loging a {
  color: #fff;
- text-decoration: none;
+ text-decoration: underline;
 }
 
 .register {
  width: 100%;
  height: 100%;
- position: fixed;
+ position: absolute;
  top: 0;
  left: 0;
- display: flex;
- align-items: center;
- justify-content: center;
  overflow: auto;
 }
 
@@ -108,20 +106,29 @@ body {
  height: 60px;
  text-align: center;
  line-height: 60px;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ margin: -335px 0 0 -280px;
  background-color: rgba(0, 0, 0, 0.6);
 }
 
-.form_title span {
+.form_title span{
+ max-width: 100%;
+ height: auto;
+ display: block;
+ margin: 0 auto;
  font-size: 24pt;
- text-align: center;
- vertical-align: sub;
  color: #fff;
 }
 
 .form_register {
  width: 560px;
- margin-top: 1px;
  padding-top: 35px;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ margin: -274px 0 0 -280px;
  background-color: rgba(0, 0, 0, 0.6);
 }
 
